After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728264 - No timeout in header when timeout is 60s
No timeout in header when timeout is 60s
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
unspecified
Other Linux
: Normal normal
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-15 13:49 UTC by Göran Jönsson
Modified: 2014-06-05 08:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gst-rtsp-server patch (1007 bytes, patch)
2014-04-15 13:49 UTC, Göran Jönsson
rejected Details | Review
gst-rtsp-server patch ( configurable to always show timeout in header) (2.91 KB, patch)
2014-05-27 10:43 UTC, Göran Jönsson
none Details | Review
gst-rtsp-server patch ( configurable to always show timeout in header) (2.91 KB, patch)
2014-05-27 11:23 UTC, Göran Jönsson
committed Details | Review

Description Göran Jönsson 2014-04-15 13:49:40 UTC
Created attachment 274367 [details] [review]
gst-rtsp-server patch

There is no timeout in header when timeout is 60s.
Comment 1 Göran Jönsson 2014-05-27 10:43:44 UTC
Created attachment 277273 [details] [review]
gst-rtsp-server patch ( configurable to always show timeout in header)

An alternative patch added. If it's preferred to make it configurable to show
timeout in header also when timeout is 60s
Comment 2 Göran Jönsson 2014-05-27 11:23:40 UTC
Created attachment 277281 [details] [review]
gst-rtsp-server patch ( configurable to always show timeout in header)

Fix spell error
Comment 3 Wim Taymans 2014-06-05 08:40:59 UTC
commit aaf921cac423a7dee34d66def9271845b8c998eb
Author: Göran Jönsson <goranjn@axis.com>
Date:   Tue May 27 12:36:52 2014 +0200

    rtsp-session: Timeout in header.
    
    Adding the possbilty to always have timout in header.
    This is configurabe with setting "timeout-always-visible".
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=728264